--- a/jeu-angular/app/index.html
+++ b/jeu-angular/app/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="gameApp">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
   <title>index</title>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css">
