--- a/jeu/index.html
+++ b/jeu/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="jquery.mobile-1.4.5.min.css" />
 <script src="js/jquery-1.11.1.min.js"></script>
 <script src="js/jquery.mobile-1.4.5.min.js"></script>
+<script src="js/fs.js"></script>
 <script src="js/nav.js"></script>
 	<link rel="stylesheet" href="jeu.css"/>
 </head>
@@ -14,7 +15,7 @@
 
 <div data-role="page" id="index">
 	<div role="main" class="ui-content vcenter">
-		<p><a href="actor.html" data-role="button">JOUER</a></p>
+		<p><a href="actor.html" data-role="button" id="playbutton">JOUER</a></p>
 	</div>
 </div>
 
