wip ejs maj ripple

--- a/butterfly/m.html
+++ b/butterfly/m.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-    <meta name="viewport" content="width=320px, user-scalable=no" />
+    <meta name="viewport" content="width=320, user-scalable=no" />
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.js"></script>
-    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
     <script type="text/javascript" src="js/jquery.ba-throttle-debounce.js"></script>
 </head>
 <body>
