--- a/laurentperez.fr/index.html
+++ b/laurentperez.fr/index.html
@@ -1,1 +1,26 @@
-index
+<html>
+	<head>
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		<title>Laurent Perez</title>
+		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+<style>
+body {
+font-family: 'Roboto Mono', monospace;
+}
+.link {
+height:2em;
+}
+</style>
+
+	</head>
+	<body>
+		<main>
+		<div class="link">
+		<a href="https://www.linkedin.com/in/laurentperez/" target="_blank">my linkedin profile</a>
+		</div>
+		<div class="link">
+		<a href="https://github.com/laurentperez/arternet/" target="_blank">my github profile</a>
+		</div>
+		</main>
+	</body>
+</html>
