--- a/laurentperez.fr/index.html
+++ b/laurentperez.fr/index.html
@@ -4,12 +4,15 @@
 		<title>Laurent Perez</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 <style>
+html, body {height:100%;}
 body {
 font-family: 'Roboto Mono', monospace;
 }
 .link {
 height:2em;
 }
+main {display:flex;flex-direction:column;}
+main > div {flex:1;}
 </style>
 
 	</head>
@@ -19,7 +22,7 @@ height:2em;
 		<a href="https://www.linkedin.com/in/laurentperez/" target="_blank">my linkedin profile</a>
 		</div>
 		<div class="link">
-		<a href="https://github.com/laurentperez/arternet/" target="_blank">my github profile</a>
+		<a href="https://github.com/laurentperez?tab=repositories" target="_blank">my github profile</a>
 		</div>
 		</main>
 	</body>
