--- a/laurentperez.fr/index.html
+++ b/laurentperez.fr/index.html
@@ -24,6 +24,8 @@ main > div {flex:1;}
 		<div class="link">
 		<a href="https://github.com/laurentperez?tab=repositories" target="_blank">my github profile</a>
 		</div>
+		<div class="github-widget" data-username="laurentperez"></div>
+		<script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
 		</main>
 	</body>
 </html>
