--- a/laurentperez.fr/index.html
+++ b/laurentperez.fr/index.html
@@ -26,6 +26,9 @@ main > div {flex:1;}
 		</div>
 		<div class="github-widget" data-username="laurentperez"></div>
 		<script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
+<br><a href="https://stackoverflow.com/users/6352303/laurent-perez">
+<img src="https://stackoverflow.com/users/flair/6352303.png" width="208" height="58" alt="profile for Laurent Perez at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Laurent Perez at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+</a>
 		</main>
 	</body>
 </html>
