--- a/laurentperez.fr/index.html
+++ b/laurentperez.fr/index.html
@@ -18,7 +18,7 @@ main > div {flex:1;}
 	</head>
 	<body>
 		<main>
-<br><a href="https://stackoverflow.com/users/6352303/laurent-perez">
+stackoverflow :<br><a href="https://stackoverflow.com/users/6352303/laurent-perez">
 <img src="https://stackoverflow.com/users/flair/6352303.png" width="208" height="58" alt="profile for Laurent Perez at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Laurent Perez at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
 </a>
 		<div class="link">
@@ -27,8 +27,8 @@ main > div {flex:1;}
 		<div class="link">
 		<a href="https://github.com/laurentperez?tab=repositories" target="_blank">my github profile</a>
 		</div>
-		<div class="github-widget" data-username="laurentperez"></div>
+	<!--	<div class="github-widget" data-username="laurentperez"></div>
 		<script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
-		</main>
+		--></main>
 	</body>
 </html>
