--- a/laurentperez.fr/index.html
+++ b/laurentperez.fr/index.html
@@ -3,6 +3,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<title>Laurent Perez</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 <style>
 html, body {height:100%;}
 body {
@@ -11,19 +12,17 @@ font-family: 'Roboto Mono', monospace;
 .link {
 height:2em;
 }
-main {display:flex;flex-direction:column;}
-main > div {flex:1;}
+main {display:flex;}
+main > div {flex:1;margin:4px;}
 </style>
 
 	</head>
 	<body>
 		<main>
-stackoverflow :<br><a href="https://stackoverflow.com/users/6352303/laurent-perez">
+<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="laurentperez"><a class="LI-simple-link" href='https://fr.linkedin.com/in/laurentperez?trk=profile-badge'>Laurent Perez</a></div>
+<div><a href="https://stackoverflow.com/users/6352303/laurent-perez">
 <img src="https://stackoverflow.com/users/flair/6352303.png" width="208" height="58" alt="profile for Laurent Perez at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Laurent Perez at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
-</a>
-		<div class="link">
-		<a href="https://www.linkedin.com/in/laurentperez/" target="_blank">my linkedin profile</a>
-		</div>
+</a></div>
 		<div class="link">
 		<a href="https://github.com/laurentperez?tab=repositories" target="_blank">my github profile</a>
 		</div>
