--- a/laurentperez.fr/index.html
+++ b/laurentperez.fr/index.html
@@ -13,21 +13,25 @@ font-family: 'Roboto Mono', monospace;
 height:2em;
 }
 main {display:flex;}
-main > div {flex:1;margin:4px;}
+main > div {max-width:280px;flex:1;margin:4px;}
 </style>
 
 	</head>
 	<body>
-		<main>
+<!--<div class="github-card" data-github="laurentperez" data-width="400" data-height="" data-theme="default"></div>
+<script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+-->	
+	<main>
 <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="laurentperez"><a class="LI-simple-link" href='https://fr.linkedin.com/in/laurentperez?trk=profile-badge'>Laurent Perez</a></div>
+
 <div><a href="https://stackoverflow.com/users/6352303/laurent-perez">
 <img src="https://stackoverflow.com/users/flair/6352303.png" width="208" height="58" alt="profile for Laurent Perez at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Laurent Perez at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
-</a></div>
-		<div class="link">
-		<a href="https://github.com/laurentperez?tab=repositories" target="_blank">my github profile</a>
-		</div>
+</a>
+
+</div>
 	<!--	<div class="github-widget" data-username="laurentperez"></div>
 		<script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
 		--></main>
+<a href="https://github.com/laurentperez?tab=repositories" target="_blank">my github profile</a>
 	</body>
 </html>
