--- a/laurentperez.fr/index.html
+++ b/laurentperez.fr/index.html
@@ -33,5 +33,7 @@ main > div {max-width:280px;flex:1;margin:4px;}
 		<script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
 		--></main>
 <a href="https://github.com/laurentperez?tab=repositories" target="_blank">my github profile</a>
+<br>
+<a href="https://imgflip.com/i/1t2ad0"><img width="280px" src="https://i.imgflip.com/1t2ad0.jpg" title="made at imgflip.com"/></a>
 	</body>
 </html>
