--- a/laurentperez.fr/index.html
+++ b/laurentperez.fr/index.html
@@ -14,6 +14,11 @@ height:2em;
 }
 main {display:flex;}
 main > div {max-width:280px;flex:1;margin:4px;}
+@media screen and (max-width: 640px) {
+  main {
+    flex-direction:column;
+  }
+}
 </style>
 
 	</head>
