--- a/laurentperez.fr/index.html
+++ b/laurentperez.fr/index.html
@@ -1,13 +1,13 @@
 <html>
-	<head>
-		<meta name="viewport" content="width=device-width,initial-scale=1" />
-		<title>Laurent Perez</title>
-		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+<head>
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Laurent Perez</title>
+<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 <style>
 html, body {height:100%;}
 body {
-font-family: 'Roboto Mono', monospace;
+	font-family: 'Roboto Mono', monospace;
 }
 .link {
 height:2em;
@@ -15,30 +15,28 @@ height:2em;
 main {display:flex;}
 main > div {max-width:280px;flex:1;margin:4px;}
 @media screen and (max-width: 640px) {
-  main {
-    flex-direction:column;
-  }
+	main {
+		flex-direction:column;
+	}
 }
 </style>
 
-	</head>
-	<body>
+</head>
+<body>
 <!--<div class="github-card" data-github="laurentperez" data-width="400" data-height="" data-theme="default"></div>
 <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
 -->	
-	<main>
+<main>
 <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="laurentperez"><a class="LI-simple-link" href='https://fr.linkedin.com/in/laurentperez?trk=profile-badge'>Laurent Perez</a></div>
 
-<div><a href="https://stackoverflow.com/users/6352303/laurent-perez">
+<div>
+<a href="https://stackoverflow.com/users/6352303/laurent-perez">
 <img src="https://stackoverflow.com/users/flair/6352303.png" width="208" height="58" alt="profile for Laurent Perez at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Laurent Perez at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
 </a>
-
 </div>
-	<!--	<div class="github-widget" data-username="laurentperez"></div>
-		<script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
-		--></main>
+</main>
 <a href="https://github.com/laurentperez" target="_blank">my github profile</a>
-<br>
-<a href="https://imgflip.com/i/1t2ad0"><img width="280px" src="https://i.imgflip.com/1t2ad0.jpg" title="made at imgflip.com"/></a>
-	</body>
+<br><br>
+<a href="https://imgflip.com/i/23wrtp"><img width="280px" src="https://i.imgflip.com/23wrtp.jpg" title="made at imgflip.com"/></a>
+</body>
 </html>
