--- a/laurentperez.fr/index.html
+++ b/laurentperez.fr/index.html
@@ -27,10 +27,21 @@ main > div {max-width:280px;flex:1;margin:4px;}
 <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
 -->	
 <main>
+<!--
 <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="laurentperez"><a class="LI-simple-link" href='https://fr.linkedin.com/in/laurentperez?trk=profile-badge'>Laurent Perez</a></div>
 
+-->
 <div>
-<a href="https://stackoverflow.com/users/6352303/laurent-perez">
+<a href="https://www.linkedin.com/in/laurentperez/" target="_blank">
+<img src="lkbadge.png"/>
+</a>
+</div>
+
+
+<div style="position: relative;
+    margin-left: 60px;">
+<a target="_blank" href="https://stackoverflow.com/users/6352303/laurent-perez">
+my stackoverflow<br>
 <img src="https://stackoverflow.com/users/flair/6352303.png" width="208" height="58" alt="profile for Laurent Perez at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for Laurent Perez at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
 </a>
 </div>
