--- a/laurentperez.fr/meetup/rv/index.html
+++ b/laurentperez.fr/meetup/rv/index.html
@@ -53,38 +53,38 @@
 					<small>hacks JS = parce qu'on n'a pas le choix</small>
 				</section>
 
-				<section>
-						<p>Division en 6 grandes APIs</p>
-						<p>https://github.com/w3c/css-houdini-drafts (repo des specs)</p>
-						<p>https://drafts.css-houdini.org (specs)</p>
-						<ul>
-								<li class="fragment fade-up">CSSOM API (CAPI)</li>
-								<li class="fragment fade-up">Properties/Values API (PVAPI)</li>
-								<li class="fragment fade-up">Paint API (PAPI)</li>
-								<li class="fragment fade-up">Web Animation API (WAAPI)</li>
-								<li class="fragment fade-up">Layout API (LAPI) *</li>
-								<li class="fragment fade-up">Font Metrics API (FMAPI) *</li>
-							</ul>
-							<small>* = pas encore d'implémentation stable</small>
-				</section>
-
-				<section>
-					<h2>Oui, mais le support ?</h2>
-					<p>https://www.chromestatus.com/features#houdini</p>
-					<p>https://ishoudinireadyyet.com</p>
+			<section>
+					<p>Division en 6 grandes APIs</p>
+					<p>https://github.com/w3c/css-houdini-drafts (repo des specs)</p>
+					<p>https://drafts.css-houdini.org (specs)</p>
 					<ul>
-						<li>CSSOM : shipped Chrome, ii FF, in dev SF</li>
-						<li>PropValPI : partial 90% Chrome/SF, in dev FF</li>
-						<li>Paint API : shipped Chrome, ii FF, in dev SF</li>
-						<li>Animation API : partial 70% Chrome (sans chorégraphie, Q1 2020)</li>
-						<li>Layout API : très partial Chrome, ii FF</li>
-						<li>Font Metrics API : rien, uniquement les specs</li>
-					</ul>
-					<small>ii : Intent to Implement, in dev : en cours</small>
-				</section>
+							<li class="fragment fade-up">CSSOM API (CAPI)</li>
+							<li class="fragment fade-up">Properties/Values API (PVAPI)</li>
+							<li class="fragment fade-up">Paint API (PAPI)</li>
+							<li class="fragment fade-up">Web Animation API (WAAPI)</li>
+							<li class="fragment fade-up">Layout API (LAPI) *</li>
+							<li class="fragment fade-up">Font Metrics API (FMAPI) *</li>
+						</ul>
+						<small>* = pas encore d'implémentation stable</small>
+			</section>
+
+			<section>
+				<h2>Oui, mais le support ?</h2>
+				<p>https://www.chromestatus.com/features#houdini</p>
+				<p>https://ishoudinireadyyet.com</p>
+				<ul>
+					<li>CSSOM : shipped Chrome, ii FF, in dev SF</li>
+					<li>PropValPI : partial 90% Chrome/SF, in dev FF</li>
+					<li>Paint API : shipped Chrome, ii FF, in dev SF</li>
+					<li>Animation API : partial 70% Chrome (sans chorégraphie, Q1 2020)</li>
+					<li>Layout API : très partial Chrome, ii FF</li>
+					<li>Font Metrics API : rien, uniquement les specs</li>
+				</ul>
+				<small>ii : Intent to Implement, in dev : en cours</small>
+			</section>
 			
 				
-				<section>
+			<section>
 				<h2>CSSOM API</h2>
 				<small>passer vite</small>
 				<p>Fini la concaténation et les typos, et enfin le try/catch</p>
@@ -92,18 +92,18 @@
 				<p>Nouvel objet CSS et .attributesStyleMap/.computedStyleMap</p>
 				<pre><code class="css">
 el.attributeStyleMap.set('opacity', CSS.number(0.3));
-el.attributeStyleMap.has('opacity') // true
-el.computedStyleMap().get('opacity').value // old getComputedStyle
-el.attributeStyleMap.delete('opacity') // remove opacity.
+el.attributeStyleMap.has('opacity');
+el.computedStyleMap().get('opacity').value // ex getComputedStyle
+el.attributeStyleMap.delete('opacity')
 el.attributeStyleMap.clear();
-CSS.vw('100');CSS.px(42);
-CSS.percent('10');CSS.ms(300);
-new CSSMathSum(CSS.vw(100), CSS.px(-10)).toString(); // "calc(100vw + -10px)"
-const css = CSSStyleValue.parse('transform', 'translate4d(bogus value)'); // throw
+CSS.vw('100'); CSS.px(42);
+CSS.percent('10'); CSS.ms(300);
+new CSSMathSum(CSS.vw(100), CSS.px(-10)) // "calc(100vw + -10px)"
+new CSSStyleValue.parse('transform', 'translate4d(...)'); // throw
 				</code></pre>
 			</section>
 
-				<section>
+			<section>
 				<h2>Properties/Values API 🔑</h2>
 				<p>De la structure/typage dans des variables CSS custom</p>
 				<p>... on rappelle BEM/SASS/Less pour une structure de classes</p>
@@ -114,21 +114,21 @@ CSS.registerProperty({
 		syntax: '&lt;color&gt;',
 		inherits: true,
 		initialValue: 'vanilla',
-	});</code></pre>
-				<p>Ne pas réinventer des horreurs lexicales comme couleur=color, ni substituer aux data-* HTML5</p>
+});</code></pre>
+				<p>SVP ne pas réinventer des horreurs lexicales comme couleur=color, ni substituer aux data-* HTML5</p>
 				<p>demo</p>
-				</section>
+			</section>
 
-				<section><h2>Paint API 🎨</h2>
+			<section><h2>Paint API 🎨</h2>
 				<p>Dessin 2D personnalisé avec background:paint(foo);</p>
 				<p>Introduction de PaintWorklet : analogie avec les ServiceWorkers pour le cache/offline/push notifs</p>
 				<p>Une Worklet est un JS short-lived, destructible par le moteur, déplaçable entre threads</p>
 				<p>But : qu'il ne tourne pas dans la main thread (main JS UI =lag)</p>
 				<p>La Paint API donne un Canvas (2DContext)</p>
 				<p>demo</p>
-				</section>
+			</section>
 
-				<section>
+			<section>
 					<h2>Web Animations API 🎬</h2>
 					<p>Animations non blocking à 60fps relatives à la timeline et au scroll
 					... c'est surtout fait pour le scroll, et ça le fait bien</p>
@@ -136,53 +136,53 @@ CSS.registerProperty({
 					<p>AnimationWorklet/KeyFrameEffect, avec état</p>
 					<p>Limite actuelle : séquence/chorégraphie à faire à la main</p>
 					<p>demo</p>
-				</section>
+			</section>
 
-				<section>
-						<p>Sprints : https://www.chromium.org/teams/animations/animation-objectives</p>
-						<p>Pour le moment (Août), GroupEffect = enchaînement de KeyFrameEffects est désactivé, mais dans la spec</p>
-						<p>Travail important de Yi Gu sur la Chorégraphie et Staggering pour améliorer la spec</p>
-						<p>https://github.com/yi-gu/group_effect</p>
-						<p>Q1 2020</p>
-				</section>
+			<section>
+					<p>Sprints : https://www.chromium.org/teams/animations/animation-objectives</p>
+					<p>Pour le moment (Août), GroupEffect = enchaînement de KeyFrameEffects est désactivé, mais dans la spec</p>
+					<p>Travail important de Yi Gu sur la Chorégraphie et Staggering pour améliorer la spec</p>
+					<p>https://github.com/yi-gu/group_effect</p>
+					<p>Q1 2020</p>
+			</section>
 
-				<section><h2>Layout API 🖼️</h2>
-					<p>Quand flex ou grid ne suffisent plus (oui oui)</p>
-					<p>tl;dr : écrire son propre display:layout('monlayout');</p>
-					<p>https://houdini.glitch.me/layout</p>
-					<p>Rappel : c'est Bloomberg qui a sponsorisé grid dans WebKit (Igalia)</p>
-					<p>Conteneur de LayoutChild/Fragments dans un ParentLayout</p>
-					<p>Le Parent a des borders, paddings : les Edges. Entre les Edges, on a des Constraints. Les LayoutChild sont dans ces Constraints et ont des Fragments</p>
-					<p>La clef : chaque Fragment a un inlineOffset/blockOffset pour le positionner par rapport à la box de son Child</p>
-					<p>C'est - en gros - du position:relative; dans un wireframe</p>
-				</section>
+			<section><h2>Layout API 🖼️</h2>
+				<p>Quand flex ou grid ne suffisent plus (oui oui)</p>
+				<p>tl;dr : écrire son propre display:layout('monlayout');</p>
+				<p>https://houdini.glitch.me/layout</p>
+				<p>Rappel : c'est Bloomberg qui a sponsorisé grid dans WebKit (Igalia)</p>
+				<p>Conteneur de LayoutChild/Fragments dans un ParentLayout</p>
+				<p>Le Parent a des borders, paddings : les Edges. Entre les Edges, on a des Constraints. Les LayoutChild sont dans ces Constraints et ont des Fragments</p>
+				<p>La clef : chaque Fragment a un inlineOffset/blockOffset pour le positionner par rapport à la box de son Child</p>
+				<p>C'est - en gros - du position:relative; dans un wireframe</p>
+			</section>
 
-				<section>
-					<p>c'est un peu plus compliqué que les autres API</p>
-					<p>penser à Tetris : une disposition de blocs constraints dans un espace clot</p>
-					<p>display:layout('L'); display:layout('4bar');</p>
-					<p>4bar est ici 4 Fragments empilés, L 3 et le 4e a un offset</p>
-					<p>Les blocs Fragments sont _parallélisables_ pour les moteurs next-gen (LayoutNG CR, WebRender FF) : quand le 4bar rentre et 'flashe' un Tetris, 4 lignes sont à effacer, et y-4 pour au dessus</p>
-					<p>Cas d'usage : architecture, UI normés (affichage dash militaire/voiture/avion, presse écrite, eBooks, ePub Comics)</p>
-					<small>des utilisaturs.trices de QuarkXPress/InDesign ?</small>
-					<p>demo / illustrations</p>
-				</section>
+			<section>
+				<p>c'est un peu plus compliqué que les autres API</p>
+				<p>penser à Tetris : une disposition de blocs constraints dans un espace clot</p>
+				<p>display:layout('L'); display:layout('4bar');</p>
+				<p>4bar est ici 4 Fragments empilés, L 3 et le 4e a un offset</p>
+				<p>Les blocs Fragments sont _parallélisables_ pour les moteurs next-gen (LayoutNG CR, WebRender FF) : quand le 4bar rentre et 'flashe' un Tetris, 4 lignes sont à effacer, et y-4 pour au dessus</p>
+				<p>Cas d'usage : architecture, UI normés (affichage dash militaire/voiture/avion, presse écrite, eBooks, ePub Comics)</p>
+				<small>des utilisaturs.trices de QuarkXPress/InDesign ?</small>
+				<p>demo / illustrations</p>
+			</section>
 
-				<section>
-					<h2>Font Metrics API 🔠</h2>
-					<p>... causée par la Layout API :</p>
-					<p>dessiner des blocs custom c'est cool mais : on a souvent besoin de gérer du texte dedans</p>
-					<p>exemples : faire son propre line-breaking, connaître la baseline dans un Fragment, les tailles réelles des ligatures Œ, Æ, محرك, et cætera ...</p>
-					<p>exposer seulement la font ne suffit pas : il faut descendre au niveau du glyphe dessiné par chaque navigateur</p>
-				</section>
+			<section>
+				<h2>Font Metrics API 🔠</h2>
+				<p>... causée par la Layout API :</p>
+				<p>dessiner des blocs custom c'est cool mais : on a souvent besoin de gérer du texte dedans</p>
+				<p>exemples : faire son propre line-breaking, connaître la baseline dans un Fragment, les tailles réelles des ligatures Œ, Æ, محرك, et cætera ...</p>
+				<p>exposer seulement la font ne suffit pas : il faut descendre au niveau du glyphe dessiné par chaque navigateur</p>
+			</section>
 				
-				<section>
-					<h2>Pour suivre / plus loin</h2>
-					<p>https://www.chromium.org/teams (rétros 'agiles')</p>
-					<p>https://houdini.glitch.me (démos)</p>
-					<p>2020 : rapprochement de Paint API et WAnimations API</p>
-					<p>On peut imaginer un IDE en ligne 100% web, gratuit et open source qui remplacerait Sketch/Adobe XD, 100% extensible car basé sur des APIs ouvertes</p>
-				</section>
+			<section>
+				<h2>Pour suivre / plus loin</h2>
+				<p>https://www.chromium.org/teams (rétros 'agiles')</p>
+				<p>https://houdini.glitch.me (démos)</p>
+				<p>2020 : rapprochement de Paint API et Web Animations API</p>
+				<p>On peut imaginer un IDE en ligne 100% web, gratuit et open source qui remplacerait Sketch/Adobe XD, 100% extensible car basé sur des APIs ouvertes</p>
+			</section>
 
 				<!--
 				<section>Recap blogs wk/chome</section>
@@ -217,16 +217,16 @@ CSS.registerProperty({
 							<h2>Dark mode</h2>
 							<p class="darkside_txt">iOS13, Android Q</p>
 							<pre><code class="css" data-trim data-line-numbers="1">
-								@media (prefers-color-scheme: dark) {
-									body {
-									  background-color: black;
-									  color: white;
-									}
-									.darkside {
-										background-image:url('vador.jpg')
-									}
-								  }
-													</code></pre>
+	@media (prefers-color-scheme: dark) {
+		body {
+			background-color: black;
+			color: white;
+		}
+		.darkside {
+			background-image:url('vador.jpg')
+		}
+		}
+								</code></pre>
 								<p class="darkside"></p>
 						</section>
 
