--- a/laurentperez.fr/meetup/rv/cssp/index.html
+++ b/laurentperez.fr/meetup/rv/cssp/index.html
@@ -2,13 +2,18 @@
 <!doctype html>
 <style>
   #hotel {
-    --ranking: 1; /* mon type */
+    --ranking: 1; /* ma note séjour */
+    /* hack pour charger image, type <image> pas 100% implémenté */
     --flamingo:url('fla.jpg');
-    list-style-image: var(--flamingo); /* hack pour charger image, <color> bug */
+    list-style-image: var(--flamingo); 
     background-image: paint(meetup); /* mon peintre */
-    height: 200px; /* je suis 'vide : toile où je vais être peint */
+    height: 200px; /* je suis 'vide' : hauteur toile où je vais être peint */
     flex:1;
     margin:10px;
+  }
+  #under {
+    background-image: paint(underline);
+    padding: 15px;
   }
   main {
     display: flex;
@@ -26,6 +31,8 @@
   <img id="photo" src="https://dummyimage.com/100x100" alt="">
   <div id="hotel">Evaluez votre s&eacute;jour  &nbsp;</div>
 </main>
+<div ><h1 id="under">J'ai une underline custom</h1></div>
+
 <script>
   CSS.registerProperty({
     name: '--ranking', /* on type ranking en number */
@@ -42,4 +49,5 @@
 </script>
 <script>
   CSS.paintWorklet.addModule('meetup.js');
+  CSS.paintWorklet.addModule('under.js');
 </script>
